<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_search_category_default"
          android:alphabeticShortcut="s"
          android:title="@string/search"
          android:id="@+id/search">
    </item>

    <item android:icon="@android:drawable/ic_menu_add" android:alphabeticShortcut="a" android:title="@string/add" android:id="@+id/add">
    </item>

    <item android:icon="@android:drawable/ic_menu_more" android:alphabeticShortcut="m" android:title="@string/more" android:id="@+id/more">
        <menu>
            <item android:title="@string/change_master_password" android:id="@+id/change_master_password">
            </item>
        <item android:id="@+id/restore" android:title="@string/restore"></item><item android:id="@+id/backup" android:title="@string/backup"></item>
<item android:title="@string/about" android:id="@+id/about"></item>
</menu>
    </item>
</menu>
