<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/accountScrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:padding="10dip">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/account_name"/>

        <EditText android:id="@+id/account_name" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:layout_marginBottom="10dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/userid"/>

        <EditText android:id="@+id/account_userid" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:layout_marginBottom="10dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/password"/>

        <EditText android:id="@+id/account_password" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:inputType="textVisiblePassword"
                  android:layout_marginBottom="10dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/url"/>

        <EditText android:id="@+id/account_url"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:layout_marginBottom="10dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/notes"/>

        <EditText android:id="@+id/account_notes"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:inputType="textMultiLine"
                  android:layout_marginBottom="10dip"
                  android:lines="3"/>

        <Button android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

    </LinearLayout>

</ScrollView>
