<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  			  android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center_vertical|center_horizontal"
              android:paddingLeft="20dip"
              android:paddingRight="20dip">

	<TextView android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/existing_master_password"
			  android:layout_marginBottom="10dip"/>

    <EditText android:id="@+id/existing_master_password" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:layout_marginBottom="40dip"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/new_password"
              android:layout_marginBottom="10dip"/>

    <EditText android:id="@+id/new_master_password" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:layout_marginBottom="10dip"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/new_password_confirm"
              android:layout_marginBottom="10dip"/>

    <EditText android:id="@+id/new_master_password_confirm" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:layout_marginBottom="20dip"/>

    <Button android:id="@+id/change_master_password_ok_button"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ok_label"
			android:layout_gravity="center"
 			android:paddingLeft="20dip"
			android:paddingRight="20dip"/>

</LinearLayout>
