<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dip">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/url"/>

        <EditText android:id="@+id/remote_db_url" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:inputType="textUri"
                  android:layout_marginBottom="10dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/userid"/>

        <EditText android:id="@+id/remote_url_userid" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:layout_marginBottom="10dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/password"/>

        <EditText android:id="@+id/remote_url_password" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:layout_marginBottom="10dip"/>

        <CheckBox android:id="@+id/trust_all_certificates"
                  android:text="@string/trust_all_certificates"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="20dip"/>

        <Button android:id="@+id/download_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:layout_gravity="center"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

</LinearLayout>
