<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/accountScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="10dip">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/account_name"
                  android:textStyle="bold"
                  android:textSize="20dp"/>

    	<TextView android:id="@+id/account_name" 
	              android:layout_width="match_parent"
	              android:layout_height="wrap_content"
    			  android:layout_marginBottom="10dip"
                  android:textSize="20dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/userid"
                  android:textStyle="bold"
                  android:textSize="20dp"/>

	    <TextView android:id="@+id/account_userid" 
	              android:layout_width="match_parent"
	              android:layout_height="wrap_content"
			      android:layout_marginBottom="10dip"
                  android:textSize="20dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/password"
                  android:textStyle="bold"
                  android:textSize="20dp"/>

	    <TextView android:id="@+id/account_password" 
	              android:layout_width="match_parent"
	              android:layout_height="wrap_content"
			      android:layout_marginBottom="10dip"
                  android:textSize="20dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/url"
                  android:textStyle="bold"
                  android:textSize="20dp"/>

	    <TextView android:id="@+id/account_url"
	              android:layout_width="match_parent"
	              android:layout_height="wrap_content"
			      android:layout_marginBottom="10dip"
                  android:textSize="20dp"
                  android:autoLink="all"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/notes"
                  android:textStyle="bold"
                  android:textSize="20dp"/>

	    <TextView android:id="@+id/account_notes"
	              android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:layout_marginBottom="10dip"
                  android:textSize="20dp"/>

    </LinearLayout>

</ScrollView>
